# qt-and-github-actions

./: CMakeLists.txt
.github/workflows/: pipeline.yml
